
  Pre-release 0.6.2

  o FEATURE: Regularize sphere function introduced.

  o FEATURE: --update-self to update pre-release binary from server.

  o FEATURE: SBase molecules can be imported (under Search Monomer
    Library).

  o CHANGE: Align & Mutate now provides a simple dialog with the
    alignment.

  o CHANGE: Environment distances are separated into bumps and bonds
    [Bob Nolte].

  o CHANGE: Move molecule here only moves small molecules by default
    now.  There is an check button to allow big molecules [Kevin
    Madauss].

  o CHANGE: In MTZ reading Expert Mode, if the low resolution limit is
    not set, then presume that it was 999.9A [Randy Read].

  o CHANGE: pointer distances are updated on go-to-blob [JED].

  o CHANGE: Real-space refinement is now interruptible [[JED].

  o CHANGE: Residues are checked atom by atom against the dictionary
    and refinement is not started if there is not complete agreement
    (for non-Hydrogen atoms) [JED].

  o BUG-FIX:: Hydrogens on waters are no longer checked against the
    difference map in the water validation test.

  o BUG-FIX: rename residue works on only the specified chain.

  o BUG-FIX: Symmetry is updated on accepting a Rotate/Translate
    modification [Ezra Peisach].

  o BUG-FIX: NCS differences were broken by gaps of different lengths
    [Ingo Korndoerfer].

  o BUG-FIX: Fix the crash when sphere refine was used at the same
    time that the geometry graph was displayed [JED].

  o BUG-FIX: rotate/translate large fragments now works better.

  o BUG-FIX: transform-map function fixed for 5 arguments.

  o BUG-FIX: Sort-chains no longer loses header information [Bob
    Nolte].

-----

  Release 0.6.1

  o FEATURE: Quick-save - bound to Ctrl-S.

  o FEATURE: Binary updates (pre-releases) now available. 

  o FEATURE: tutorial data can be loaded from a Extensions menu item

  o FEATURE: A means to set the refinement weight so that the